<resources>
    <string name="app_name">Love Your Husband</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="day1text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Loving your husband begins in your heart and mind.
        Today, write down 20 things about your husband that you are truly grateful for.
    </string>
    <string name="day2text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Sometimes it is true what they say - the way
        to a man’s heart is through his stomach!  You may be a great cook in the kitchen, or you might be a type of person
        who would rather order delivery!  Either way, your husband will appreciate this gesture.  Tell him you want to cook
        him something special, and ask him what he would like to have.  Do your best to find a good recipe.  Cook the meal
        as best you can, lay out the fancy plates, and set the table extra fancy.  Even if the food doesn’t turn out the way
        you would like, he will definitely appreciate your effort in creating a special date night.  </string>
    <string name="day3text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Movie date!  Watch a movie (not a show!) with
        your husband.  This can be at home or at a movie theater.  Make sure he knows that it is his turn to pick.  If he
        chooses something you don’t like, that’s ok!  Try to be cheerful - do not complain!  It is a chance to expand your
        tastes, and also to practice showing your husband that you care about his interests even if yours are different.
        What did you watch?
    </string>
    <string name="day4text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020A  husband should love you no matter what you
        look like!  But at the same time, men tend to be more visually oriented than women.  Today, take special
        consideration to improve your physical appearance in a way that your husband tends to appreciate.
        For example, this could be wearing a dress he likes, working out to get better in shape, doing your hair in a way
        that he really likes, putting on make-up, or getting rid of a piece of clothing that he really hates.  Your
        husband should love you regardless, but he will appreciate the effort you take and the attention you give to his
        suggestions.</string>
    <string name="day5text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Today, plan a really fancy date with your husband.
        It’s ok to spend money to have a good time with your spouse now and then!  Think of something where you both can
        really dress to impress.  You want to be able to wear your nicest dress, your best jewelry, have a good time, and be reminded of how lucky you are to have each other!  Have fun!</string>
    <string name="day6text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Sometimes loving your husband means you first have to take time to love yourself.  Today, take time to do something that really refreshes your spirit.  Get some exercise, do some meditation, hang out with friends, read some books, get out in the sun… find something that really brings you joy and commit to taking care of yourself today so you have energy and gratefulness. </string>
    <string name="day7text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020One of the most important things we can do to build a healthy marriage is truly listen to each other.  Today, check in with your husband.   How is he doing?  What’s been going on in his life lately?  Really listen, make eye contact, asking questions, making sure you understand where he is coming from.  If he is distressed, sympathize but encourage him, and ask if there is anything you can do to help.  If he is doing great, be happy for him.  How is he?</string>
    <string name="day8text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Find a time with your husband that you can set aside to talk face to face.  Tell him that you want to love him better, and be a better wife for him.  Ask your him how he feels you have been treating him.  Ask him what he thinks you can do to be a better wife.  Do not criticize or become defensive, as he may say some things that are difficult to hear.  Just listen.  Thank him for his honest feedback, and be willing to tell him that you are planning to make changes in your life on those issues.  Afterward, write down some of the major points here.  How can you practically address his concerns?</string>
    <string name="day9text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Write your husband a letter.  Men desire respect and gratitude.  Tell him all the reasons you are proud of him.  Tell him what it is about him that you are grateful for.  Tell him you love him.  Give him the letter.</string>
    <string name="day10text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020It is important that your husband knows he comes first in your life, and one of the best ways to do this is by giving him your undivided attention.  Today, whenever your husband speaks to you, drop what you are doing, turn toward him, make eye contact, and truly listen, taking the time to hear out all that is on his mind.  How did it go?</string>
    <string name="day11text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Make time to go for a walk together and hold his hand. Phones stay at home.  Going for a walk is a great to get out of the house, enjoy the outdoors, and have time talking about whatever comes to mind.  Many couples do this on a regular basis.  How did it go? </string>
    <string name="day12text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Write down some of the things your husband does around the house that you really appreciate.  Get a post it note or piece of paper, choose one of those things, and write a note expressing your thanks.  Post it somewhere he will see it - possibly in a place right next to where the chore starts!</string>
    <string name="day13text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Today, you get to take personal inventory.  How do you think you have been as a wife?  Write down 3 strengths and 3 weakness.  Choose one of those weaknesses.  Tell your husband that you know you have not been what you want to be in that particular area, and apologize if this has hurt him.  Tell him you will try to make improvements upon it in the future, and give him specific examples of what you plan to do to make that happen.</string>
    <string name="day14text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020It is important that your husband knows you speak well of him in front of others.  Today, publicly express gratitude for something about your husband in front of your family or friends.  Yes, Facebook counts too.</string>
    <string name="day15text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Write him a letter, telling him one of your favorite memories together and leave it somewhere he may not notice it right away - perhaps in the car, in his wallet, or a journal.</string>
    <string name="day16text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Take time to hold your husband’s hand or give him a hug today.  It is important that we show physical affection that is also non-sexual. Write down what you did, and how he responded.</string>
    <string name="day17text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Try a new food together!  Adventure is the spice of life, and it is fun and important to create memories with your husband.  </string>
    <string name="day18text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Is there something your husband has done that has hurt you?  Write it down here.
        Today, realize that no one is perfect. Forgive your husband in your heart, as you would want to be forgiven.
        If you need to forgive him in person, do so and write about the response.  When finished, write \"Forgiven\".</string>
    <string name="day19text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Physical intimacy is extremely important to most men - even if they do not express it.  They experience emotional closeness and connection through physical intimacy.  Today, have a frank and honest discussion with your husband about your physical initmacy.  Tell him to be honest, and be honest yourself.  Keep an attitude of willingness to make changes.</string>
    <string name="day20text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Is there a certain outfit that your husband really wishes you would wear, but for some reason, you never wear it?  Give it a shot!  Even it’s just around the house, he will appreciate it!</string>
    <string name="day21text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020The next time you and your husband disagree about something, let him win!  He will feel respected, validated, and trusted.</string>
    <string name="day22text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020"We all know that waiting until the end of the night to have sex often means you fall asleep before you get to it," says Ian Kerner, a relationship and sex expert, and author. Try an alternative time to have sex — your lunch hour, on a Saturday afternoon when the house is empty or by slipping into his morning shower. If evenings are truly the only available time, make it a priority—get into bed earlier, forego the flannel PJs and make an event out of it.</string>
    <string name="day23text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Absence makes the heart grow fonder.  Literally! There is a reason why the old sentiment is such a classic. Spending time apart gives you a chance to reflect on your relationship, gets you out of your routine and, most obviously (and perhaps most significantly!), gives you an opportunity to miss each other! Get on the phone and schedule that girls\' weekend that you and your friends keep talking about, visit your mother or give yourself the gift of some time alone. A little bit of time spent apart will make a big difference in how you reconnect afterwards.</string>
    <string name="day24text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Couples that play together, stay together!  Today, do a puzzle or play a game together!  Have some fun!</string>
    <string name="day25text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Sometimes it’s nice to just get out of the house, try a new place, and have a chat.  Ask your husband out for a coffee date!  If he can’t do one today, put one in the calendar!</string>
    <string name="day26text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Write down some things you appreciate about your husband’s physical appearance.
        Look him in the eye and compliment her on this.  </string>
    <string name="day27text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Today, surprise your husband, and randomly grab his butt sometime during the day!  Alternatively, take a shower together!</string>
    <string name="day28text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Do you remember the time before being married, when you were dating?  You used to flirt, even though you may not know it!  Pick a favorite flirtation and do it again today.</string>
    <string name="day29text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Suggest reading a book of shared interest or an article that is interesting to both of you.  You can read it aloud together, or read it on your own - but make a point to talk about it!</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="invite">Invite</string>
    <string name="currentChallenge">Current Challenge</string>
    <string name="day1">Day 1</string>
    <string name="day30">Day 30</string>
    <string name="trophies">Trophies</string>
    <string name="recommendToFriend">Recommend to Friend</string>
</resources>