<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.loveyourhusband.MainActivity">


    <item
        android:id="@+id/action_share_app"
        android:icon="@drawable/share_white"
        android:orderInCategory="50"
        android:title="@string/invite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_jumpCurrent"
        android:orderInCategory="75"
        android:title="@string/currentChallenge"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_jumpBeginning"
        android:orderInCategory="150"
        android:title="@string/day1"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_jumpEnd"
        android:orderInCategory="200"
        android:title="@string/day30"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/action_trophyPage"
        android:orderInCategory="250"
        android:title="@string/trophies"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_recommend"
        android:orderInCategory="275"
        android:title="@string/recommendToFriend"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_removeAds"
        android:orderInCategory="300"
        android:title="@string/remove_ads"
        app:showAsAction="never"/>
</menu>

